# smarc_navigation

./: .gitignore  LICENSE  README.md  release_packages.yaml  smarc_navigation.rosinstall
.github/workflows/: main.yml  release.yml  test-release.yml
auv_ekf_localization/: CMakeLists.txt  package.xml  setup.py
auv_ekf_localization/include/correspondence_class/: correspondence_class.hpp
auv_ekf_localization/include/ekf_localization/: ekf_localization.hpp
auv_ekf_localization/include/landmark_ml/: landmark_ml.hpp
auv_ekf_localization/include/lolo_auv_nav/: lolo_auv_nav.hpp
auv_ekf_localization/include/mbes_receptor/: mbes_receptor.hpp
auv_ekf_localization/include/noise_oneD_kf/: noise_oneD_kf.hpp
auv_ekf_localization/include/sonar_manipulator/: sonar_manipulator.hpp
auv_ekf_localization/include/utils_matrices/: utils_matrices.hpp
auv_ekf_localization/launch/: ekf_localization.launch
auv_ekf_localization/maps/: map_stones1.yaml
auv_ekf_localization/rosbags/: rosbag_handler.py
auv_ekf_localization/scripts/: map_provider_node.py
auv_ekf_localization/src/: correspondence_obj.cpp  ekf_localization.cpp  ekf_localization_node.cpp  landmark_ml.cpp  lolo_auv_nav.cpp  lolo_auv_nav_node.cpp  mbes_receptor.cpp  mbes_receptor_node.cpp  noise_oneD_kf.cpp  sonar_manipulator.cpp  utils_matrices.cpp
auv_ekf_localization/srv/: map_ekf.srv
auv_ekf_slam/: CMakeLists.txt  package.xml
auv_ekf_slam/include/correspondence_class/: correspondence_class.hpp  correspondence_fls.hpp  correspondence_mbes.hpp
auv_ekf_slam/include/ekf_slam/: ekf_slam.hpp
auv_ekf_slam/include/ekf_slam_core/: ekf_slam_core.hpp
auv_ekf_slam/include/utils/: ekf_utils.hpp
auv_ekf_slam/launch/: ekf_slam.launch
auv_ekf_slam/src/: correspondence_obj.cpp  correspondence_obj_fls.cpp  correspondence_obj_lfs.cpp  correspondence_obj_mbes.cpp  ekf_slam.cpp  ekf_slam_core.cpp  ekf_slam_node.cpp
auv_ekf_slam/utils/: ekf_utils.cpp
auv_graph_localization/: CMakeLists.txt  package.xml
auv_odom_provider/: CMakeLists.txt  package.xml
auv_odom_provider/src/: odom_provider.cpp  odom_provider_node.cpp
auv_particle_filter/: package.xml
auv_particle_filter/launch/: auv_pf.launch  slamParticleFilter.launch  slam_particle_filter.launch
auv_particle_filter/scripts/: auv_particle.py  auv_pf.py  auv_pf_gp.py  slamParticle.py  slamParticleFilter.py  slam_particle.py  slam_particle_filter.py  target_initializer.py  visual_tools.py
auv_sensors/: CMakeLists.txt  package.xml
auv_sensors/launch/: auv_sensors.launch
ekf_general/: CMakeLists.txt  package.xml  setup.py
ekf_general/DataSets/: map_o3.txt  map_pent_big_10.txt  map_pent_big_40.txt  so_o3_ie.txt  so_pb_10_outlier.txt
ekf_general/DataSets/.svn/: all-wcprops  entries
ekf_general/DataSets/.svn/text-base/: map_o3.txt.svn-base  map_pent_big_10.txt.svn-base  map_pent_big_40.txt.svn-base  so_pb_40_no.txt.svn-base
ekf_general/DataSets/CVS/: Entries  Repository
ekf_general/DataSets/CVS/.svn/: all-wcprops  entries
ekf_general/DataSets/CVS/.svn/text-base/: Root.svn-base
ekf_general/include/: landmark_ml.hpp  localization.hpp  sens_sim.hpp
ekf_general/launch/: lab_sim.launch
ekf_general/msg/: sensors_read.msg
ekf_general/scripts/: output_node.py
ekf_general/src/: landmark_ml.cpp  localization.cpp  localization_node.cpp  sens_sim.cpp  sens_sim_node.cpp
ekf_general/srv/: plot_map.srv
ekf_lolo_auv/: CMakeLists.txt  package.xml
ekf_lolo_auv/include/ekf_class/: ekf_class.hpp
ekf_lolo_auv/include/landmark_ml/: landmark_ml.hpp
ekf_lolo_auv/include/lolo_auv_nav/: lolo_auv_nav.hpp
ekf_lolo_auv/include/mbes_receptor/: mbes_receptor.hpp
ekf_lolo_auv/include/sonar_manipulator/: sonar_manipulator.hpp
ekf_lolo_auv/launch/: ekf_launch.launch  lolo_auv.launch  lolo_auv_ekf.launch
ekf_lolo_auv/maps/: map_stones1.yaml
ekf_lolo_auv/scripts/: map_provider_node.py
ekf_lolo_auv/src/: ekf_class.cpp  landmark_ml.cpp  lolo_auv_nav.cpp  lolo_auv_nav_node.cpp  mbes_receptor.cpp  mbes_receptor_node.cpp  sonar_manipulator.cpp
floatsam_dead_reckoning/: CMakeLists.txt  package.xml
floatsam_dead_reckoning/launch/: floatsam_dr.launch
floatsam_dead_reckoning/scripts/: floatsam_mm.py  usv_dr_node.py  usv_gps_node.py
fls_processors/: CMakeLists.txt  package.xml
fls_processors/src/: fls_rock_detector.cpp
mbes_processors/: CMakeLists.txt  package.xml
mbes_processors/include/toy_mbes_receptor/: toy_mbes_receptor.hpp
mbes_processors/mbes_mapper/: CMakeLists.txt  package.xml
mbes_processors/mbes_mapper/include/mbes_mapper/: mbes_receptor.hpp
mbes_processors/mbes_mapper/src/: mbes_receptor.cpp  mbes_receptor_node.cpp
mbes_processors/mbes_toy_processor/: CMakeLists.txt  package.xml
mbes_processors/mbes_toy_processor/include/toy_mbes_receptor/: toy_mbes_manipulator.hpp  toy_mbes_receptor.hpp
mbes_processors/mbes_toy_processor/src/: toy_mbes_manipulator.cpp  toy_mbes_receptor.cpp  toy_mbes_receptor_node.cpp
mbes_processors/src/: toy_mbes_manipulator.cpp  toy_mbes_receptor_node.cpp
sam_camera_config/: CMakeLists.txt  package.xml
sam_camera_config/launch/: csi_nv.launch  multi_csi_nv.launch  rosbag_record_multi.launch
sam_dead_reckoning/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sam_dead_reckoning/docs/: dr.rst
sam_dead_reckoning/launch/: dual_ekf_dvl_dr.launch  dual_ekf_floatsam.launch  dual_ekf_test.launch  dual_ekf_test_new.launch  dual_ekf_test_old.launch  external.launch  floatsam_dr.launch  nav_sat_interface.launch  sam_dr.launch  sam_ext_dr.launch  sam_gps_dr.launch  sam_gps_dummy.launch  sam_stim_dr.launch
sam_dead_reckoning/params/: dual_ekf_sam.yaml  ekf_gps_sam.yaml  ekf_sam.yaml
sam_dead_reckoning/rviz/: dr.rviz  visual_docking.rviz
sam_dead_reckoning/scripts/: acc_model.py  algae_map.py  dr_node.py  dvl_dr.py  dvl_to_twist.py  dvl_twist.py  dynamics_model.py  gps_node.py  (+15 more)
sam_localization/: CMakeLists.txt  package.xml
tf_convenience_topics/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf_lat_lon/: CHANGELOG.rst  CMakeLists.txt  package.xml
uw_gps/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+22 files in other folders)
